--- a/projects/clubs-hfc.html
+++ b/projects/clubs-hfc.html
@@ -50,41 +50,26 @@
         <section id="problem" class="content-section">
             <h2 class="section-title">Description</h2>
             <div class="section-content">
-                <p>As the Hydrogen Lead for the UCLA Supermileage Vehicle team, 
-                    I have to integrate a hydrogen fuel cell to work along with the 
-                    rest of car and the systems and supply continuous power to the wheels. I'm 
-                    also leading the initiative to design, analyze, and manufacture our own 
-                    PEM open cathode fuel cell.
-                </p>
+                <p><strong>Situation:</strong> As the Hydrogen Lead for the UCLA Supermileage Vehicle team, I was tasked with integrating a hydrogen fuel cell to work seamlessly with the car's systems to supply continuous power to the wheels.</p>
+                <p><strong>Task:</strong> I led the initiative to design, analyze, and manufacture our own PEM open cathode fuel cell, ensuring it met the team's performance and integration requirements.</p>
             </div>            
         </section>
 
         <section id="summary" class="content-section">
             <h2 class="section-title">Summary</h2>
             <div class="section-content">
-                <p>Since creating a Hydrogen Fuel Cell requires both chemistry/materials science
-                     and mechanical engineering knowledge, we've split up this subteam into two seperate
-                     teams: MEA (which handles the chemistry/matsci) and Hardware (which handles the Hardware
-                     components and analysis). 
-                </p>
-                <p>
-                    The MEA team is currently using blade coating techniques and reading literature to coat
-                    catalyst onto the membranes in conjuction with the Huang Lab, which we've been working with.
-                    Through trying various recipes out, we're trying to save cost and manufacture our own 
-                    membranes with catalyst in house.
-                </p>
-                <p>
-                    The Hardware team is designing and analyzing the various components in the fuel cell, with
-                    various factors to keep in mind, including uniform mass transfer throughout the flowfields,
-                    cooling and heat management, humidity, and clamping force within the stack.
-                </p>
-                <p>
-                    As the lead of both these teams, I provide guidance on any troubles these teams are running into 
-                    with analysis -- along with determining the overall trajectory of our subteam, and the 
-                    general specs of the fuel cell we're trying to develop, including parameters like operating temperature,
-                     pressure, expected power, current, active area, etc. I also handle the communication and integration
-                     with sponsors and other teams.
-                </p>
+                <p><strong>Action:</strong></p>
+                <ul>
+                    <li>I divided the subteam into two specialized groups: MEA, focusing on chemistry and materials science, and Hardware, focusing on the mechanical components and analysis.</li>
+                    <li>The MEA team collaborated with the Huang Lab to develop cost-effective membrane coating techniques.</li>
+                    <li>The Hardware team designed and analyzed fuel cell components, considering factors like mass transfer, cooling, and clamping force.</li>
+                    <li>I provided guidance on technical challenges, set the subteam's trajectory, and managed communication with sponsors and other teams.</li>
+                </ul>
+                <p><strong>Result:</strong></p>
+                <ul>
+                    <li>We documented our research and design approach in a comprehensive slideshow and organized past designs and timelines in a Notion workspace.</li>
+                    <li>The project enhanced my leadership skills and provided insights into team management, technical analysis, and cross-disciplinary collaboration.</li>
+                </ul>
                 <p>
                     A lot of the research of how the parameters of the fuel cell and design should be approached has been
                     documented in a slideshow, shown below, and we also created a Notion to organize past designs and timelines:
