--- a/projects/clubs-mk9cb.html
+++ b/projects/clubs-mk9cb.html
@@ -46,10 +46,7 @@
         <section id="problem" class="content-section">
             <h2 class="section-title">Description</h2>
             <div class="section-content">
-                <p>Our Formula SAE car had a huge problem -- the suspension joints ran too close to the tripod
-                    housings and the half shafts. No off the shelf CV Boots would be able to fit without rubbing,
-                    which is a huge problem, as not only would the car not be rules legal, but the half shaft 
-                    joints also wouldn't be protected, leading to catastrophic failure.
+                <p>Our Formula SAE car had a big issue: the suspension joints were way too close to the tripod housings and half shafts. No off-the-shelf CV Boots would fit without rubbing, which was a major problem. Not only would the car not be rules legal, but the half shaft joints wouldn't be protected, leading to potential disaster.
                 </p>
             </div>            
         </section>
@@ -57,35 +54,10 @@
         <section id="summary" class="content-section">
             <h2 class="section-title">Summary</h2>
             <div class="section-content">
-                <p>The solution was to design our own CV Boots, with custom geometry. After looking
-                    through 4 different options, we settled on using PMC 770, which has a 30 minute
-                    pouring time and a durometer of 70A.
+                <p><b>Action:</b> We decided to design our own CV Boots with custom geometry. After checking out four different options, we went with PMC 770 because it has a 30-minute pouring time and a durometer of 70A. The mold was tricky since the boots were ribbed and hollow, requiring at least two parts: an inner and an outer mold. The ribs made it impossible to remove the inner mold unless it was destroyed and reprinted each time. We solved this by dividing the inner mold into sections that could slide out and collapse for easy removal. After iterating over many versions, we finally settled on a CV Boot geometry and mold design with six pieces that fit together perfectly. Pouring was also challenging due to the 10-minute working time, but after many attempts, we found success with a formula of 5-6 minutes of degassing in a vacuum chamber and tilting the mold while pouring to minimize bubbles.
                 </p>
-                <p>Another problem came in the mold; since the boots were ribbed and hollow, there had to be 
-                    two parts to the mold minimum: an inner and an outer mold. However, the ribs made it 
-                    impossible to remove the inner mold, unless it was destroyed and reprinted each time.
+                <p><b>Result:</b> Our innovative solution successfully sealed the CV joint, making the car rules legal and preventing mechanical failure. Plus, we scored a bonus point at the FSAE competition!
                 </p>
-                <p>We solved this by dividing the inner mold into different sections, that would slide out 
-                    and collapse to barely be able to fit and remove. After iterating over tens of versions,
-                    we finally settled on a CV Boot geometry and mold design that had 6 pieces, which all fit
-                    together and made our CV Boot.
-                </p>
-                <p>Pouring was also a big difficulty: with the time constriant of a 10 minute working time,
-                    we had to work fast, and after many many attempts, we settled on a formula of around 5-6 minutes
-                    of degassing in a vaccuum chamber, and then tilting the mold while pouring, which we found
-                    resulted in the most success and the least amount of bubbles. There's a lot more that we learned
-                    through trial and error; however, in the end, our innovative solution successfully sealed 
-                    our CV joint and scored us a bonus point at the FSAE competition.
-                </p>
-                <!-- <br>
-                <b>Takeaways</b>
-                <p>This project provided valuable insights into:</p>
-                <ul>
-                    <li>Leading teams and </li>
-                    <li>FEA/Topology Optimization</li>
-                    <li>Designing things to fit specifications, with a factor of safety</li>
-                    <li>Designing components while working with other teams to make sure everything is integrated properly</li>
-                </ul> -->
             </div>
         </section>
 
