--- a/projects/personal-egk.html
+++ b/projects/personal-egk.html
@@ -49,9 +49,11 @@
         <section id="problem" class="content-section">
             <h2 class="section-title">Description</h2>
             <div class="section-content">
-                <p>My group and I decided to make a 3 wheeled electric go kart as a part of an engineering class. We were offered
-                    wheels, the makerspace, 80/20 extrusions, round stock, an electric motor, and a tiny amount of money to make it work. We also
-                    decided to make our go kart pirate ship themed -- which meant it had to be pointy at the front, hence the 3 wheels!
+                <p>
+                    <b>Situation</b>: I, along with my group, started a project to make a 3-wheeled electric go-kart as part of an engineering class. We were provided with wheels, access to a makerspace, 80/20 extrusions, round stock, an electric motor, and a limited budget. Our theme was a pirate ship, which inspired the pointy front design and the three-wheel configuration.
+                </p>
+                <p>
+                    <b>Task</b>: My role involved dividing the work among team members for different subassemblies, including the chassis, steering, drivetrain, cockpit (gas/brake pedals), and integration. I collaborated on the top assembly and contributed to the CAD design, which comprised over 130 components.
                 </p>
             </div>            
         </section>
@@ -60,39 +62,11 @@
             <h2 class="section-title">Summary</h2>
             <div class="section-content">
                 <p>
-                    We started off with dividing the work between us for different subassemblies, which included the 
-                    <ul>
-                        <li>Chassis</li>
-                        <li>Steering</li>
-                        <li>Drivetrain</li>
-                        <li>Cockpit (Gas/Brake Pedals)</li>
-                        <li>Integration</li>
-                    </ul>
+                    <b>Action</b>: I took the initiative to design a bevel-gear-based system for single-wheel steering in the front, using 3D printed parts and fasteners, along with a custom plasma-cut gusset for alignment (we couldn't afford a U-Joint). I also worked on the chassis, which featured FEA-analyzed 80/20 gussets, secured with plasma-cut gussets and fasteners. I designed the drivetrain components, which included FDM 3D printed parts, to connect the battery-powered BLDC motors to the rear wheels. The brakes were designed to engage with a bike brake system. I ensured the chassis was as compact as possible for weight savings, based on the measurements of our shortest team member.
                 </p>
                 <p>
-                    With this division of tasks, we all collaborated on a top assembly and finished our CAD (with over 130 components in the total assembly).
+                    <b>Result</b>: The project was a success, with the go-kart fully assembled and operational. The pirate theme was maintained with custom-designed pedals, a pirate ship wheel for steering, and trident-like drivetrain components. I learned the importance of designing components that are manufacturable, affordable, and easy to assemble. Despite some redesigns, particularly in the chassis, the final product met all our objectives and functioned as intended.
                 </p>
-                <p>
-                    Since we couldn't afford a U-Joint, we used a bevel-gear based system for single wheel steering in the front,
-                    fastened to the chassis with 3d printed parts and fasteners, and a custom plasma cut gusset for concentric alignment.
-                    Our chassis featured 80/20 gussets that were FEA analyzed, and secured together with more plasma cut gussets and fasteners.
-                    Our battery powered 2 BLDC motors, one per rear wheel, which were connected with belts and a determined ratio via the FDM 3D printed 
-                    drivetrain components to the wheels. Our brakes engaged with a bike brake that pressed against the wheels when activated.
-                    We made our chassis as skinny/short as possible, based off the measurement of our shortest friend, to 
-                    ensure weight savings.
-                </p>
-                <p>
-                    Finally, to stay in theme, we had our pedals have a pirate symbol be imprinted on them, our steering wheel be a pirate ship wheel that we CAD-ded,
-                    and our drivetrain components to 'look' like beefy tridents (while passing the testing under max torque).
-                </p>
-                <p>
-                    We had to take special note to make sure that the components we were designing were able to be manufactured/made, or bought cheaply, and when assembling
-                    was possible to be able to be put on. This was a big issue in some chassis components, which we had to re-design -- but in the end,
-                    we got everything on the kart and it worked!
-                </p>
-                <!-- <br>
-                <b>Takeaways</b>
-                <p>This project provided valuable insights into:</p>-->
             </div> 
         </section>
 
