--- a/projects/personal-sbr.html
+++ b/projects/personal-sbr.html
@@ -56,7 +56,7 @@
         <section id="problem" class="content-section">
             <h2 class="section-title">Problem Statement</h2>
             <div class="section-content">
-                <p>Building a cute compact self balancing robot</p>
+                <p><strong>Situation/Task:</strong> Building a cute compact self-balancing robot was the main goal, aiming to make it as small as possible.</p>
             </div>
         </section>
 
@@ -85,11 +85,8 @@
         <section id="lessons" class="content-section">
             <h2 class="section-title">Lessons Learned</h2>
             <div class="section-content">
-                <p>Learned a lot on circuit design, how circuit theory is applied in real life, and designing around mounting and placement of electrical systems. Also touched into control theory with PID control.</p>
-                <!-- <ul>
-                    <li>FILLERLESSON</li>
-                    <li>FILLERLESSON</li>
-                </ul> -->
+                <p><strong>Action:</strong> I engaged in circuit design, and applied circuit theory in real-life scenarios alongside short hand calculations to spec out motors and microcontrollers necessary. I also focused on the mounting and placement of electrical systems. Additionally, I explored control theory with PID control.</p>
+                <p><strong>Result:</strong> Through this project, I gained valuable skills in Arduino Nano, soldering, product design, and surface modeling.</p>
             </div>
         </section>
 
