--- a/projects/research-pdmsch.html
+++ b/projects/research-pdmsch.html
@@ -48,32 +48,16 @@
         <section id="problem" class="content-section">
             <h2 class="section-title">Description</h2>
             <div class="section-content">
-                <p>Xenopus eggs often come in batches of hundred/thousands, and each egg needs to be checked and filtered out 
-                    if they're useless. This was previously done manually, with hours of tedious labor.
-                    As the sole mechanical engineer, I designed the hardware components for this mechatronics project,
-                    which automates this sorting process.
-                </p>
+                <p><strong>Situation</strong>: Xenopus eggs often come in batches of hundreds or thousands, requiring each egg to be checked and filtered out if deemed useless. This process was previously done manually, involving hours of tedious labor.</p>
+                <p><strong>Task</strong>: As the sole mechanical engineer, I was tasked with designing the hardware components for a mechatronics project aimed at automating the sorting process of these eggs.</p>
             </div>            
         </section>
 
         <section id="summary" class="content-section">
             <h2 class="section-title">Summary</h2>
             <div class="section-content">
-                <p>
-                    The eggs that are being sorted are these ~1mm wide eggs, that will flow through a chip,
-                    and through a combination of sensors and pressure regulators, will be stopped, photographed on both sides,
-                    sorted with a machine learning model, and then when they're flowing out, sensors will keep track
-                    of which egg goes where, and they'll be seperated from each other with a quake valve sorter mechanism 
-                    (which was selected from iterating through other sorting mechanisms).
-                </p>
-                <p>
-                    There will be a transparent chip made of PDMS, which is casted from an SLA printed mold, and a housing
-                    that positions this chip in betweeen two mirrors, so when a camera is pointed it can take a picture of both
-                    the top and the bottom of the chip for the machine learning model to categorize the eggs.
-                </p>
-                <!-- <br>
-                <b>Takeaways</b>
-                <p>This project provided valuable insights into:</p>-->
+                <p><strong>Action</strong>: I designed the hardware for the system for the ~1mm wide eggs that flow through the chip. Using a combination of sensors and pressure regulators, the eggs are stopped, photographed on both sides, and sorted with a machine learning model. As they flow out, sensors track each egg's path, and a quake valve sorter mechanism, selected after iterating through various sorting mechanisms, separates them.</p>
+                <p><strong>Result</strong>: The system includes a transparent chip made of PDMS, cast from an SLA printed mold, housed between two mirrors. This setup allows a camera to capture images of both the top and bottom of the chip, enabling the machine learning model to categorize the eggs effectively.</p>
             </div> 
         </section>
 
